# local-ip-address

./: .cirrus.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: bindings-build.yml  bindings-publish-dry-run.yml  build.yml  clippy.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  fmt.yml  publish-dry-run.yml  release.yml  test.yml
bindings/: Cargo.toml  README.md  build.rs
examples/: show_ip_and_ifs.rs
src/: bsd.rs  error.rs  lib.rs  linux.rs  macos.rs  unix.rs  windows.rs
src/unix/: mod.rs
src/windows/: mod.rs
src/windows/bindings/: Cargo.toml  build.rs
