[package]
name = "local-ip-address"
description = "Retrieve system's local IP address and Network Interfaces/Adapters on Linux, macOS and Windows."
repository = "https://github.com/EstebanBorai/local-ip-address"
categories = ["web-programming", "network-programming"]
homepage = "https://github.com/EstebanBorai/local-ip-address"
keywords = ["local", "ip", "address", "web", "network"]
license = "MIT OR Apache-2.0"
version = "0.5.7"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.6"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
]

[[example]]
name = "example"
path = "examples/show_ip_and_ifs.rs"
